# Agent-IA-Apprentissage

./: .env.example  .gitignore  README.md  USAGE.md  agent.py  app.py  ask.py  chat.py  langgraph.json  requirements-langchain.txt  requirements.txt
CLI/: cli.py
MCP/: Tools.py  mcp_servers.py  skills.py
MCP/flixbus-mcp/: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
MCP/sncf-mcp/: README.md  sncf_server.py
configuration/: langchain_system_prompt.py
eval/: cases.json  langsmith_eval.py
skills/: README.md  travel.md
