[project]
name = "flixbus-mcp"
version = "0.1.0"
description = "FlixBus MCP Server - Access FlixBus API through Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "fastmcp>=2.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]